[project]
name = "clickhouse-sqlalchemy"
dynamic = ["version"]
description = "SQLAlchemy dialect for ClickHouse"
authors = [
    {name = "Konstantin Lebedev", email = "kostyan.lebedev@gmail.com"},
]
dependencies = ["alembic>=1.14.0", "asynch>=0.2.5", "clickhouse-driver>=0.2.9", "requests>=2.32.3", "sqlalchemy>=2.0.36"]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "MIT"}
keywords = ["clickhouse", "sqlalchemy", "orm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/xzkostyan/clickhouse-sqlalchemy"
Documentation = "https://clickhouse-sqlalchemy.readthedocs.io/en/latest/"
Repository = "https://github.com/xzkostyan/clickhouse-sqlalchemy"
Issues = "https://github.com/fastapi/fastapi/issues"
Changelog = "https://github.com/xzkostyan/clickhouse-sqlalchemy/blob/master/CHANGELOG.md"
PyPI = "https://pypi.org/project/clickhouse-sqlalchemy/"

[tool.pdm.version]
source = "file"
path = "clickhouse_sqlalchemy/__init__.py"

[tool.pdm]
distribution = true

[dependency-groups]
docs = ["sphinx>=7.4.7"]
lint = ["mypy>=1.13.0", "ruff>=0.7.2"]
test = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0", "parameterized>=0.9.0", "responses>=0.25.3"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"

[project.entry-points."sqlalchemy.dialects"]
"clickhouse" = "clickhouse_sqlalchemy.drivers.http.base:ClickHouseDialect_http"
"clickhouse.asynch" = "clickhouse_sqlalchemy.drivers.asynch.base:ClickHouseDialect_asynch"
"clickhouse.http" = "clickhouse_sqlalchemy.drivers.http.base:ClickHouseDialect_http"
"clickhouse.native" = "clickhouse_sqlalchemy.drivers.native.base:ClickHouseDialect_native"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
